Изменение создания запроса на GSE